package com.webienestar.modelos.enums;

public enum CondVivienda {
    PROPIA,
    ALQUILER,
    FAMILIAR
}
