package com.webienestar.modelos.enums;

public enum EstadoBeca {
    EN_EVALUACION,
    APROBADA,
    DENEGADA
}
