package com.webienestar.modelos.enums;

public enum EstadoReserva {
    RESERVADA,
    RETIRADA,
    CANCELADA,
    CALIFICADA,
    NO_RETIRADA
}
