package com.webienestar.modelos.enums;

public enum Genero {
    MASCULINO,
    FEMENINO,
    OTRO
}
