package com.webienestar.modelos.enums;

public enum Rol {
    ESTUDIANTE,
    ADMIN,
    EMPLEADO_COMEDOR,
    EMPLEADO_CONTROL,
    SECRETARIO
}
