package com.webienestar.modelos.enums;

public enum TipoVivienda {
    DEPARTAMENTO,
    CASA,
    RESIDENCIA,
    PENSION,
    OTRO
}
